Fixed footer text alignment for mobile view

--- a/education_style.css
+++ b/education_style.css
@@ -253,5 +253,6 @@ li {
   .buttons {grid-area: 6 / span 2;
          text-align: center;}
   #footer {grid-area: 7 / span 2;
+  	   padding-right: 0px;
            text-align: center;}
 }
