--- a/skills_style.css
+++ b/skills_style.css
@@ -263,5 +263,6 @@ progress {
   .buttons {grid-area: 6 / span 2;
          text-align: center;}
   #footer {grid-area: 7 / span 2;
+  	   padding-right: 0px;
            text-align: center;}
 }
